kubernetes/apps/media/plex/app/httproute.yaml
---
# yaml-language-server: $schema=https://schema.301401.xyz/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  annotations:
    gatus.home-operations.com/endpoint: |
      client:
        dns-resolver: tcp://${UNIFI_HOST}:53
      conditions: ["[STATUS] == 401"]
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames: ["plex.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: plex
          port: 32400
